--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     across devices. 
                 </p>
                 <div class="btn-con">
-                    <a href="https://drive.google.com/file/d/1oleWxIFKNOawRCJQoF8BwgyjPhU3R15-/view?usp=drive_link" class="main-btn" target="_blank">
+                    <a href="https://drive.google.com/file/d/1zRJQIywjBJn0UCbmICRE90yg2NCPvqmj/view?usp=sharing" class="main-btn" target="_blank">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
